// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01 Simple @beta and @internal extraction 1`] = `
Object {
  "s00_lines": Array [
    "START @beta",
    "@unknownTag",
    "@internal @internal END",
  ],
  "s01_gaps": Array [
    "@internal",
  ],
  "s02_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": "START ",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "BlockTag",
            "nodes": Array [
              Object {
                "kind": "Excerpt: BlockTag",
                "nodeExcerpt": "@unknownTag",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": " ",
              },
            ],
          },
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": " END",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
    ],
  },
  "s03_remarksBlock": undefined,
  "s04_privateRemarksBlock": undefined,
  "s05_deprecatedBlock": undefined,
  "s06_paramBlocks": Array [],
  "s07_typeParamBlocks": Array [],
  "s08_returnsBlock": undefined,
  "s09_customBlocks": Array [],
  "s10_tsBuiltInDirectiveBlocks": Array [],
  "s11_inheritDocTag": undefined,
  "s12_modifierTags": Array [
    Object {
      "kind": "BlockTag",
      "nodes": Array [
        Object {
          "kind": "Excerpt: BlockTag",
          "nodeExcerpt": "@beta",
        },
      ],
    },
    Object {
      "kind": "BlockTag",
      "nodes": Array [
        Object {
          "kind": "Excerpt: BlockTag",
          "nodeExcerpt": "@internal",
        },
      ],
    },
  ],
  "s13_logMessages": Array [
    "(3,4): The TSDoc tag \\"@unknownTag\\" is not defined in this configuration",
  ],
}
`;

exports[`02 A basic TSDoc comment with common components 1`] = `
Object {
  "s00_lines": Array [
    "Returns the average of two numbers.",
    "",
    "@remarks",
    "This method is part of the {@link core-library#Statistics | Statistics subsystem}.",
    "",
    "@customBlock",
    "This is a custom block containing an @undefinedBlockTag",
    "",
    "@param x - The first input number",
    "@param y$_ - The second input number",
    "@returns The arithmetic mean of [c]x[c] and [c]y$_[c]",
    "",
    "@beta @customModifier",
  ],
  "s01_gaps": Array [],
  "s02_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": "Returns the average of two numbers.",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
    ],
  },
  "s03_remarksBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodes": Array [
          Object {
            "kind": "Excerpt: BlockTag",
            "nodeExcerpt": "@remarks",
          },
        ],
      },
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "This method is part of the ",
                  },
                ],
              },
              Object {
                "kind": "LinkTag",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: InlineTag_OpeningDelimiter",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_TagName",
                    "nodeExcerpt": "@link",
                  },
                  Object {
                    "kind": "Excerpt: Spacing",
                    "nodeExcerpt": " ",
                  },
                  Object {
                    "kind": "DeclarationReference",
                    "nodes": Array [
                      Object {
                        "kind": "Excerpt: DeclarationReference_PackageName",
                        "nodeExcerpt": "core-library",
                      },
                      Object {
                        "kind": "Excerpt: DeclarationReference_ImportHash",
                        "nodeExcerpt": "#",
                      },
                      Object {
                        "kind": "MemberReference",
                        "nodes": Array [
                          Object {
                            "kind": "MemberIdentifier",
                            "nodes": Array [
                              Object {
                                "kind": "Excerpt: MemberIdentifier_Identifier",
                                "nodeExcerpt": "Statistics",
                              },
                            ],
                          },
                          Object {
                            "kind": "Excerpt: Spacing",
                            "nodeExcerpt": " ",
                          },
                        ],
                      },
                    ],
                  },
                  Object {
                    "kind": "Excerpt: LinkTag_Pipe",
                    "nodeExcerpt": "|",
                  },
                  Object {
                    "kind": "Excerpt: Spacing",
                    "nodeExcerpt": " ",
                  },
                  Object {
                    "kind": "Excerpt: LinkTag_LinkText",
                    "nodeExcerpt": "Statistics subsystem",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_ClosingDelimiter",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": ".",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  "s04_privateRemarksBlock": undefined,
  "s05_deprecatedBlock": undefined,
  "s06_paramBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "x",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "The first input number",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "y$_",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "The second input number",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "s07_typeParamBlocks": Array [],
  "s08_returnsBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodes": Array [
          Object {
            "kind": "Excerpt: BlockTag",
            "nodeExcerpt": "@returns",
          },
        ],
      },
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " The arithmetic mean of ",
                  },
                ],
              },
              Object {
                "kind": "CodeSpan",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: CodeSpan_OpeningDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_Code",
                    "nodeExcerpt": "x",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_ClosingDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " and ",
                  },
                ],
              },
              Object {
                "kind": "CodeSpan",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: CodeSpan_OpeningDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_Code",
                    "nodeExcerpt": "y$_",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_ClosingDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " ",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  "s09_customBlocks": Array [
    Object {
      "kind": "Block",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@customBlock",
            },
          ],
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "This is a custom block containing an ",
                    },
                  ],
                },
                Object {
                  "kind": "BlockTag",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: BlockTag",
                      "nodeExcerpt": "@undefinedBlockTag",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "s10_tsBuiltInDirectiveBlocks": Array [],
  "s11_inheritDocTag": undefined,
  "s12_modifierTags": Array [
    Object {
      "kind": "BlockTag",
      "nodes": Array [
        Object {
          "kind": "Excerpt: BlockTag",
          "nodeExcerpt": "@beta",
        },
      ],
    },
    Object {
      "kind": "BlockTag",
      "nodes": Array [
        Object {
          "kind": "Excerpt: BlockTag",
          "nodeExcerpt": "@customModifier",
        },
      ],
    },
  ],
  "s13_logMessages": Array [
    "(8,41): The TSDoc tag \\"@undefinedBlockTag\\" is not defined in this configuration",
  ],
}
`;

exports[`03 Incomplete @param blocks 1`] = `
Object {
  "s00_lines": Array [
    "@param - The first input number",
    "@param y The second input number",
    "@returns The arithmetic mean of [c]x[c] and [c]y[c]",
  ],
  "s01_gaps": Array [],
  "s02_summarySection": Object {
    "kind": "Section",
  },
  "s03_remarksBlock": undefined,
  "s04_privateRemarksBlock": undefined,
  "s05_deprecatedBlock": undefined,
  "s06_paramBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": " - The first input number",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "y",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "The second input number",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "s07_typeParamBlocks": Array [],
  "s08_returnsBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodes": Array [
          Object {
            "kind": "Excerpt: BlockTag",
            "nodeExcerpt": "@returns",
          },
        ],
      },
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " The arithmetic mean of ",
                  },
                ],
              },
              Object {
                "kind": "CodeSpan",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: CodeSpan_OpeningDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_Code",
                    "nodeExcerpt": "x",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_ClosingDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " and ",
                  },
                ],
              },
              Object {
                "kind": "CodeSpan",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: CodeSpan_OpeningDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_Code",
                    "nodeExcerpt": "y",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_ClosingDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  "s09_customBlocks": Array [],
  "s10_tsBuiltInDirectiveBlocks": Array [],
  "s11_inheritDocTag": undefined,
  "s12_modifierTags": Array [],
  "s13_logMessages": Array [
    "(2,4): The @param block should be followed by a parameter name",
    "(3,4): The @param block should be followed by a parameter name and then a hyphen",
  ],
}
`;

exports[`03 Jumbled order 1`] = `
Object {
  "s00_lines": Array [
    "Returns the average of two numbers. @remarks This method is part of the",
    "{@link core-library#Statistics | Statistics subsystem}.",
    "@beta @customModifier",
    "@returns The arithmetic mean of [c]x[c] and [c]y[c]",
    "@param x - The first input number @param y - The second input number",
    "@customBlock",
    "This is a custom block containing an @undefinedBlockTag",
  ],
  "s01_gaps": Array [],
  "s02_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": "Returns the average of two numbers. ",
              },
            ],
          },
        ],
      },
    ],
  },
  "s03_remarksBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodes": Array [
          Object {
            "kind": "Excerpt: BlockTag",
            "nodeExcerpt": "@remarks",
          },
        ],
      },
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " This method is part of the",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "LinkTag",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: InlineTag_OpeningDelimiter",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_TagName",
                    "nodeExcerpt": "@link",
                  },
                  Object {
                    "kind": "Excerpt: Spacing",
                    "nodeExcerpt": " ",
                  },
                  Object {
                    "kind": "DeclarationReference",
                    "nodes": Array [
                      Object {
                        "kind": "Excerpt: DeclarationReference_PackageName",
                        "nodeExcerpt": "core-library",
                      },
                      Object {
                        "kind": "Excerpt: DeclarationReference_ImportHash",
                        "nodeExcerpt": "#",
                      },
                      Object {
                        "kind": "MemberReference",
                        "nodes": Array [
                          Object {
                            "kind": "MemberIdentifier",
                            "nodes": Array [
                              Object {
                                "kind": "Excerpt: MemberIdentifier_Identifier",
                                "nodeExcerpt": "Statistics",
                              },
                            ],
                          },
                          Object {
                            "kind": "Excerpt: Spacing",
                            "nodeExcerpt": " ",
                          },
                        ],
                      },
                    ],
                  },
                  Object {
                    "kind": "Excerpt: LinkTag_Pipe",
                    "nodeExcerpt": "|",
                  },
                  Object {
                    "kind": "Excerpt: Spacing",
                    "nodeExcerpt": " ",
                  },
                  Object {
                    "kind": "Excerpt: LinkTag_LinkText",
                    "nodeExcerpt": "Statistics subsystem",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_ClosingDelimiter",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": ".",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " ",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  "s04_privateRemarksBlock": undefined,
  "s05_deprecatedBlock": undefined,
  "s06_paramBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "x",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "The first input number ",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "y",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "The second input number",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "s07_typeParamBlocks": Array [],
  "s08_returnsBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodes": Array [
          Object {
            "kind": "Excerpt: BlockTag",
            "nodeExcerpt": "@returns",
          },
        ],
      },
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " The arithmetic mean of ",
                  },
                ],
              },
              Object {
                "kind": "CodeSpan",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: CodeSpan_OpeningDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_Code",
                    "nodeExcerpt": "x",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_ClosingDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " and ",
                  },
                ],
              },
              Object {
                "kind": "CodeSpan",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: CodeSpan_OpeningDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_Code",
                    "nodeExcerpt": "y",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_ClosingDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  "s09_customBlocks": Array [
    Object {
      "kind": "Block",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@customBlock",
            },
          ],
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "This is a custom block containing an ",
                    },
                  ],
                },
                Object {
                  "kind": "BlockTag",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: BlockTag",
                      "nodeExcerpt": "@undefinedBlockTag",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "s10_tsBuiltInDirectiveBlocks": Array [],
  "s11_inheritDocTag": undefined,
  "s12_modifierTags": Array [
    Object {
      "kind": "BlockTag",
      "nodes": Array [
        Object {
          "kind": "Excerpt: BlockTag",
          "nodeExcerpt": "@beta",
        },
      ],
    },
    Object {
      "kind": "BlockTag",
      "nodes": Array [
        Object {
          "kind": "Excerpt: BlockTag",
          "nodeExcerpt": "@customModifier",
        },
      ],
    },
  ],
  "s13_logMessages": Array [
    "(8,41): The TSDoc tag \\"@undefinedBlockTag\\" is not defined in this configuration",
  ],
}
`;

exports[`04 typeParam blocks 1`] = `
Object {
  "s00_lines": Array [
    "Constructs a map from a JavaScript object",
    "",
    "@typeParam K - The generic type parameter indicating the key type",
    "@param jsonObject - The input object",
    "@typeParam V - The generic type parameter indicating the value type",
    "@returns The map",
  ],
  "s01_gaps": Array [],
  "s02_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": "Constructs a map from a JavaScript object",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
    ],
  },
  "s03_remarksBlock": undefined,
  "s04_privateRemarksBlock": undefined,
  "s05_deprecatedBlock": undefined,
  "s06_paramBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "jsonObject",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "The input object",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "s07_typeParamBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@typeParam",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "K",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "The generic type parameter indicating the key type",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@typeParam",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "V",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "The generic type parameter indicating the value type",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "s08_returnsBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodes": Array [
          Object {
            "kind": "Excerpt: BlockTag",
            "nodeExcerpt": "@returns",
          },
        ],
      },
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " The map",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  "s09_customBlocks": Array [],
  "s10_tsBuiltInDirectiveBlocks": Array [],
  "s11_inheritDocTag": undefined,
  "s12_modifierTags": Array [],
  "s13_logMessages": Array [],
}
`;

exports[`05 Invalid JSDoc syntax in @param blocks 1`] = `
Object {
  "s00_lines": Array [
    "@param {type} a - description",
    "@param {{}} b - description",
    "@param {[q]{[q]} c - description",
    "@param {[q][b][q][q]} d - description",
    "@param e {type} - description",
    "@param f {{}} - description",
    "@param g {[q]{[q]} - description",
    "@param h - {type} description",
    "@param i - {{}} description",
    "@param j - {[q]{[q]} description",
    "@param [k] - description",
    "@param [l=] - description",
    "@param [m=[]] - description",
    "@param [n=[q][[q]] - description",
    "@param [o=[q][b][q][q]] - description",
  ],
  "s01_gaps": Array [],
  "s02_summarySection": Object {
    "kind": "Section",
  },
  "s03_remarksBlock": undefined,
  "s04_privateRemarksBlock": undefined,
  "s05_deprecatedBlock": undefined,
  "s06_paramBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "{type} ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "a",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "{{}} ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "b",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "{[q]{[q]} ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "c",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "{[q][b][q][q]} ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "d",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "e",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "{type} ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "f",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "{{}} ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "g",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "{[q]{[q]} ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "h",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "{type} ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "i",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "{{}} ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "j",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "{[q]{[q]} ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "[",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "k",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "]",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "[",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "l",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "=]",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "[",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "m",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "=[]]",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "[",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "n",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "=[q][[q]]",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "[",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "o",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "=[q][b][q][q]]",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "s07_typeParamBlocks": Array [],
  "s08_returnsBlock": undefined,
  "s09_customBlocks": Array [],
  "s10_tsBuiltInDirectiveBlocks": Array [],
  "s11_inheritDocTag": undefined,
  "s12_modifierTags": Array [],
  "s13_logMessages": Array [
    "(2,11): The @param block should not include a JSDoc-style '{type}'",
    "(3,11): The @param block should not include a JSDoc-style '{type}'",
    "(4,11): The @param block should not include a JSDoc-style '{type}'",
    "(5,11): The @param block should not include a JSDoc-style '{type}'",
    "(6,13): The @param block should not include a JSDoc-style '{type}'",
    "(7,13): The @param block should not include a JSDoc-style '{type}'",
    "(8,13): The @param block should not include a JSDoc-style '{type}'",
    "(9,15): The @param block should not include a JSDoc-style '{type}'",
    "(10,15): The @param block should not include a JSDoc-style '{type}'",
    "(11,15): The @param block should not include a JSDoc-style '{type}'",
    "(12,11): The @param should not include a JSDoc-style optional name; it must not be enclosed in '[ ]' brackets.",
    "(13,11): The @param should not include a JSDoc-style optional name; it must not be enclosed in '[ ]' brackets.",
    "(14,11): The @param should not include a JSDoc-style optional name; it must not be enclosed in '[ ]' brackets.",
    "(15,11): The @param should not include a JSDoc-style optional name; it must not be enclosed in '[ ]' brackets.",
    "(16,11): The @param should not include a JSDoc-style optional name; it must not be enclosed in '[ ]' brackets.",
  ],
}
`;

exports[`06 Invalid JSDoc optional name 1`] = `
Object {
  "s00_lines": Array [
    "Example 1",
    "",
    "@param [n - this is",
    "the description",
    "",
    "@public",
  ],
  "s01_gaps": Array [],
  "s02_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": "Example 1",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
    ],
  },
  "s03_remarksBlock": undefined,
  "s04_privateRemarksBlock": undefined,
  "s05_deprecatedBlock": undefined,
  "s06_paramBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: NonstandardText",
          "nodeExcerpt": "[",
        },
        Object {
          "kind": "Excerpt: ParamBlock_ParameterName",
          "nodeExcerpt": "n",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Excerpt: ParamBlock_Hyphen",
          "nodeExcerpt": "-",
        },
        Object {
          "kind": "Excerpt: Spacing",
          "nodeExcerpt": " ",
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "this is",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": "the description",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "s07_typeParamBlocks": Array [],
  "s08_returnsBlock": undefined,
  "s09_customBlocks": Array [],
  "s10_tsBuiltInDirectiveBlocks": Array [],
  "s11_inheritDocTag": undefined,
  "s12_modifierTags": Array [
    Object {
      "kind": "BlockTag",
      "nodes": Array [
        Object {
          "kind": "Excerpt: BlockTag",
          "nodeExcerpt": "@public",
        },
      ],
    },
  ],
  "s13_logMessages": Array [
    "(4,11): The @param should not include a JSDoc-style optional name; it must not be enclosed in '[ ]' brackets.",
  ],
}
`;

exports[`07 Invalid JSDoc type 1`] = `
Object {
  "s00_lines": Array [
    "Example 1",
    "",
    "@param { test",
    "",
    "@public",
  ],
  "s01_gaps": Array [],
  "s02_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": "Example 1",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
    ],
  },
  "s03_remarksBlock": undefined,
  "s04_privateRemarksBlock": undefined,
  "s05_deprecatedBlock": undefined,
  "s06_paramBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@param",
            },
          ],
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": " ",
                    },
                  ],
                },
                Object {
                  "errorLocation": "{",
                  "errorLocationPrecedingToken": " ",
                  "errorMessage": "Expecting a TSDoc tag starting with [q]{@[q]",
                  "kind": "ErrorText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: ErrorText",
                      "nodeExcerpt": "{",
                    },
                  ],
                },
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": " test",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "s07_typeParamBlocks": Array [],
  "s08_returnsBlock": undefined,
  "s09_customBlocks": Array [],
  "s10_tsBuiltInDirectiveBlocks": Array [],
  "s11_inheritDocTag": undefined,
  "s12_modifierTags": Array [
    Object {
      "kind": "BlockTag",
      "nodes": Array [
        Object {
          "kind": "Excerpt: BlockTag",
          "nodeExcerpt": "@public",
        },
      ],
    },
  ],
  "s13_logMessages": Array [
    "(4,4): The @param block should be followed by a parameter name",
    "(4,11): Expecting a TSDoc tag starting with \\"{@\\"",
  ],
}
`;

exports[`08 JSX directive: /** @jsx foo */ 1`] = `
Object {
  "s00_lines": Array [
    "@jsx foo",
  ],
  "s01_gaps": Array [],
  "s02_summarySection": Object {
    "kind": "Section",
  },
  "s03_remarksBlock": undefined,
  "s04_privateRemarksBlock": undefined,
  "s05_deprecatedBlock": undefined,
  "s06_paramBlocks": Array [],
  "s07_typeParamBlocks": Array [],
  "s08_returnsBlock": undefined,
  "s09_customBlocks": Array [],
  "s10_tsBuiltInDirectiveBlocks": Array [
    Object {
      "kind": "Block",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@jsx",
            },
          ],
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": " foo",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "s11_inheritDocTag": undefined,
  "s12_modifierTags": Array [],
  "s13_logMessages": Array [],
}
`;

exports[`08 JSX directive: /** @jsxFrag Fragment */ 1`] = `
Object {
  "s00_lines": Array [
    "@jsxFrag Fragment",
  ],
  "s01_gaps": Array [],
  "s02_summarySection": Object {
    "kind": "Section",
  },
  "s03_remarksBlock": undefined,
  "s04_privateRemarksBlock": undefined,
  "s05_deprecatedBlock": undefined,
  "s06_paramBlocks": Array [],
  "s07_typeParamBlocks": Array [],
  "s08_returnsBlock": undefined,
  "s09_customBlocks": Array [],
  "s10_tsBuiltInDirectiveBlocks": Array [
    Object {
      "kind": "Block",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@jsxFrag",
            },
          ],
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": " Fragment",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "s11_inheritDocTag": undefined,
  "s12_modifierTags": Array [],
  "s13_logMessages": Array [],
}
`;

exports[`08 JSX directive: /** @jsxImportSource preact */ 1`] = `
Object {
  "s00_lines": Array [
    "@jsxImportSource preact",
  ],
  "s01_gaps": Array [],
  "s02_summarySection": Object {
    "kind": "Section",
  },
  "s03_remarksBlock": undefined,
  "s04_privateRemarksBlock": undefined,
  "s05_deprecatedBlock": undefined,
  "s06_paramBlocks": Array [],
  "s07_typeParamBlocks": Array [],
  "s08_returnsBlock": undefined,
  "s09_customBlocks": Array [],
  "s10_tsBuiltInDirectiveBlocks": Array [
    Object {
      "kind": "Block",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@jsxImportSource",
            },
          ],
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": " preact",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "s11_inheritDocTag": undefined,
  "s12_modifierTags": Array [],
  "s13_logMessages": Array [],
}
`;

exports[`08 JSX directive: /** @jsxRuntime classic */ 1`] = `
Object {
  "s00_lines": Array [
    "@jsxRuntime classic",
  ],
  "s01_gaps": Array [],
  "s02_summarySection": Object {
    "kind": "Section",
  },
  "s03_remarksBlock": undefined,
  "s04_privateRemarksBlock": undefined,
  "s05_deprecatedBlock": undefined,
  "s06_paramBlocks": Array [],
  "s07_typeParamBlocks": Array [],
  "s08_returnsBlock": undefined,
  "s09_customBlocks": Array [],
  "s10_tsBuiltInDirectiveBlocks": Array [
    Object {
      "kind": "Block",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodes": Array [
            Object {
              "kind": "Excerpt: BlockTag",
              "nodeExcerpt": "@jsxRuntime",
            },
          ],
        },
        Object {
          "kind": "Section",
          "nodes": Array [
            Object {
              "kind": "Paragraph",
              "nodes": Array [
                Object {
                  "kind": "PlainText",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: PlainText",
                      "nodeExcerpt": " classic",
                    },
                  ],
                },
                Object {
                  "kind": "SoftBreak",
                  "nodes": Array [
                    Object {
                      "kind": "Excerpt: SoftBreak",
                      "nodeExcerpt": "[n]",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "s11_inheritDocTag": undefined,
  "s12_modifierTags": Array [],
  "s13_logMessages": Array [],
}
`;
